--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@ form .btn {
 .filter-group select {
   width: 100%;
   padding: 12px;
-  border: 1px solid #ddd;
+  border: 1px solid #d1d1d1;
   border-radius: 4px;
   font-size: 16px;
   background-color: white;
@@ -656,7 +656,7 @@ footer {
 }
 
 .footer-section h3 span {
-  color: #3498db;
+  color: #0099ff;
 }
 
 .footer-section p {
@@ -699,13 +699,13 @@ footer {
 
 .footer-section i {
   margin-right: 10px;
-  color: #3498db;
+  color: #047fd1;
 }
 
 .footer-bottom {
   text-align: center;
   padding-top: 20px;
-  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 /* Responsive Styles */
